--- a/index.html
+++ b/index.html
@@ -196,5 +196,8 @@
       </div>
     </div>
 
+    <footer>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia, dolorem aliquid numquam ullam quidem earum atque ratione possimus adipisci, sed, cumque rem deleniti voluptatem eum enim tempore sint illum obcaecati?
+    </footer>
   </body>
 </html>
