recent elemnts created

--- a/index.html
+++ b/index.html
@@ -53,5 +53,84 @@
       </div>
     </header>
 
+    <main>
+
+      <section class="recent">
+        <div class="container">
+
+
+        <h1 class="recent-title">
+          Recent work
+        </h1>
+
+        <div class="recent-main">
+          <div class="col">
+
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/cards/1.png" alt="card-img">
+              </div>
+              <hr class="card-line">
+              <h4 class="card-title">Rockfront Wine</h4>
+              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
+            </div>
+
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/cards/2.png" alt="card-img">
+              </div>
+              <hr class="card-line">
+              <h4 class="card-title">Rockfront Wine</h4>
+              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
+            </div>
+
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/cards/3.png" alt="card-img">
+              </div>
+              <hr class="card-line">
+              <h4 class="card-title">Rockfront Wine</h4>
+              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
+            </div>
+
+          </div>
+
+          <div class="col">
+
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/cards/4.png" alt="card-img">
+              </div>
+              <hr class="card-line">
+              <h4 class="card-title">Rockfront Wine</h4>
+              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
+            </div>
+
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/cards/5.png" alt="card-img">
+              </div>
+              <hr class="card-line">
+              <h4 class="card-title">Rockfront Wine</h4>
+              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
+            </div>
+            
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/cards/6.png" alt="card-img">
+              </div>
+              <hr class="card-line">
+              <h4 class="card-title">Rockfront Wine</h4>
+              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
+            </div>
+
+          </div>
+        </div>
+        
+      </div>
+      </section>
+
+    </main>
+
   </body>
 </html>
