growing section created

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Analogue</title>
     <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
@@ -54,83 +57,124 @@
     </header>
 
     <main>
-
       <section class="recent">
         <div class="container">
+          <h1 class="recent-title">Recent work</h1>
 
-
-        <h1 class="recent-title">
-          Recent work
-        </h1>
-
-        <div class="recent-main">
-          <div class="col">
-
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/cards/1.png" alt="card-img">
+          <div class="recent-main">
+            <div class="col">
+              <div class="card">
+                <div class="card-img">
+                  <img src="assets/cards/1.png" alt="card-img" />
+                </div>
+                <hr class="card-line" />
+                <h4 class="card-title">Rockfront Wine</h4>
+                <p class="card-subtitle">
+                  Packaging/ Digital Content/ Website/
+                </p>
               </div>
-              <hr class="card-line">
-              <h4 class="card-title">Rockfront Wine</h4>
-              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
+
+              <div class="card">
+                <div class="card-img">
+                  <img src="assets/cards/2.png" alt="card-img" />
+                </div>
+                <hr class="card-line" />
+                <h4 class="card-title">Rockfront Wine</h4>
+                <p class="card-subtitle">
+                  Packaging/ Digital Content/ Website/
+                </p>
+              </div>
+
+              <div class="card">
+                <div class="card-img">
+                  <img src="assets/cards/3.png" alt="card-img" />
+                </div>
+                <hr class="card-line" />
+                <h4 class="card-title">Rockfront Wine</h4>
+                <p class="card-subtitle">
+                  Packaging/ Digital Content/ Website/
+                </p>
+              </div>
             </div>
 
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/cards/2.png" alt="card-img">
+            <div class="col">
+              <div class="card">
+                <div class="card-img">
+                  <img src="assets/cards/4.png" alt="card-img" />
+                </div>
+                <hr class="card-line" />
+                <h4 class="card-title">Rockfront Wine</h4>
+                <p class="card-subtitle">
+                  Packaging/ Digital Content/ Website/
+                </p>
               </div>
-              <hr class="card-line">
-              <h4 class="card-title">Rockfront Wine</h4>
-              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
-            </div>
 
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/cards/3.png" alt="card-img">
+              <div class="card">
+                <div class="card-img">
+                  <img src="assets/cards/5.png" alt="card-img" />
+                </div>
+                <hr class="card-line" />
+                <h4 class="card-title">Rockfront Wine</h4>
+                <p class="card-subtitle">
+                  Packaging/ Digital Content/ Website/
+                </p>
               </div>
-              <hr class="card-line">
-              <h4 class="card-title">Rockfront Wine</h4>
-              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
-            </div>
 
+              <div class="card">
+                <div class="card-img">
+                  <img src="assets/cards/6.png" alt="card-img" />
+                </div>
+                <hr class="card-line" />
+                <h4 class="card-title">Rockfront Wine</h4>
+                <p class="card-subtitle">
+                  Packaging/ Digital Content/ Website/
+                </p>
+              </div>
+            </div>
           </div>
 
-          <div class="col">
-
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/cards/4.png" alt="card-img">
-              </div>
-              <hr class="card-line">
-              <h4 class="card-title">Rockfront Wine</h4>
-              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
-            </div>
-
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/cards/5.png" alt="card-img">
-              </div>
-              <hr class="card-line">
-              <h4 class="card-title">Rockfront Wine</h4>
-              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
-            </div>
-            
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/cards/6.png" alt="card-img">
-              </div>
-              <hr class="card-line">
-              <h4 class="card-title">Rockfront Wine</h4>
-              <p class="card-subtitle">Packaging/ Digital Content/ Website/</p>
-            </div>
-
-          </div>
+          <button class="recent-btn">See all work</button>
         </div>
-        
-      </div>
       </section>
 
+      <section class="growing">
+        <div class="container">
+          <div class="growing-left">
+            <h2 class="growing-title">
+              <div>Built to last. </div>
+              <div class="libre">Always growing.</div>
+            </h2>
+          </div>
+          <div class="growing-right">
+            <hr class="growing-line" />
+            <p class="growing-p">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum.
+            </p>
+            <div class="growing-grid">
+              <div class="card">
+                <div class="card-title libre">127</div>
+                <div class="card-subtitle">Projects done</div>
+              </div>
+              <div class="card">
+                <div class="card-title libre">87%</div>
+                <div class="card-subtitle">Chance of coffee</div>
+              </div>
+              <div class="card">
+                <div class="card-title libre">24</div>
+                <div class="card-subtitle">Team members</div>
+              </div>
+              <div class="card">
+                <div class="card-title libre">4.7</div>
+                <div class="card-subtitle">Average rating</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-
   </body>
 </html>
