Clients and Ready created

--- a/index.html
+++ b/index.html
@@ -133,20 +133,20 @@
             </div>
           </div>
 
-          <button class="recent-btn">See all work</button>
+          <button class="btn">See all work</button>
         </div>
       </section>
 
       <section class="growing">
         <div class="container">
           <div class="growing-left">
-            <h2 class="growing-title">
+            <h2 class="title">
               <div>Built to last. </div>
               <div class="libre">Always growing.</div>
             </h2>
           </div>
           <div class="growing-right">
-            <hr class="growing-line" />
+            <hr class="line" />
             <p class="growing-p">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -175,6 +175,63 @@
           </div>
         </div>
       </section>
+
+      <section class="clients">
+        <div class="container">
+          <div class="title">
+            <span>Some of our</span>
+            <span class="libre">recent clients</span>
+          </div>
+
+          <hr class="line">
+          <div class="clients-grid">
+            <div class="grid-item">
+              <img src="assets/company/1.svg" alt="clients">
+            </div>
+            <div class="grid-item">
+              <img src="assets/company/2.svg" alt="clients">
+            </div>
+            <div class="grid-item">
+              <img src="assets/company/3.svg" alt="clients">
+            </div>
+            <div class="grid-item">
+              <img src="assets/company/4.svg" alt="clients">
+            </div>
+            <div class="grid-item">
+              <img src="assets/company/5.svg" alt="clients">
+            </div>
+            <div class="grid-item">
+              <img src="assets/company/6.svg" alt="clients">
+            </div>
+            <div class="grid-item">
+              <img src="assets/company/7.svg" alt="clients">
+            </div>
+            <div class="grid-item">
+              <img src="assets/company/8.svg" alt="clients">
+            </div>
+          </div>
+          <hr class="line">
+        </div>
+      </section>
+
+      <section class="ready">
+        <div class="container">
+          <hr class="line">
+
+          <div class="ready-wrapper">
+            <div class="title">
+              <span>Ready to</span>
+              <span>start?</span>
+            </div>
+
+            <div class="btn">Get in touch</div>
+          </div>
+        </div>
+
+        
+      </section>
+
     </main>
+
   </body>
 </html>
