--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="container">
           <div class="growing-left">
             <h2 class="title">
-              <div>Built to last. </div>
+              <div>Built to last.</div>
               <div class="libre">Always growing.</div>
             </h2>
           </div>
@@ -183,40 +183,40 @@
             <span class="libre">recent clients</span>
           </div>
 
-          <hr class="line">
+          <hr class="line" />
           <div class="clients-grid">
             <div class="grid-item">
-              <img src="assets/company/1.svg" alt="clients">
+              <img src="assets/company/1.svg" alt="clients" />
             </div>
             <div class="grid-item">
-              <img src="assets/company/2.svg" alt="clients">
+              <img src="assets/company/2.svg" alt="clients" />
             </div>
             <div class="grid-item">
-              <img src="assets/company/3.svg" alt="clients">
+              <img src="assets/company/3.svg" alt="clients" />
             </div>
             <div class="grid-item">
-              <img src="assets/company/4.svg" alt="clients">
+              <img src="assets/company/4.svg" alt="clients" />
             </div>
             <div class="grid-item">
-              <img src="assets/company/5.svg" alt="clients">
+              <img src="assets/company/5.svg" alt="clients" />
             </div>
             <div class="grid-item">
-              <img src="assets/company/6.svg" alt="clients">
+              <img src="assets/company/6.svg" alt="clients" />
             </div>
             <div class="grid-item">
-              <img src="assets/company/7.svg" alt="clients">
+              <img src="assets/company/7.svg" alt="clients" />
             </div>
             <div class="grid-item">
-              <img src="assets/company/8.svg" alt="clients">
+              <img src="assets/company/8.svg" alt="clients" />
             </div>
           </div>
-          <hr class="line">
+          <hr class="line" />
         </div>
       </section>
 
       <section class="ready">
         <div class="container">
-          <hr class="line">
+          <hr class="line" />
 
           <div class="ready-wrapper">
             <div class="title">
@@ -227,11 +227,60 @@
             <div class="btn">Get in touch</div>
           </div>
         </div>
-
-        
       </section>
-
     </main>
 
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-top">
+          <div class="footer-box">
+            <div class="footer-logo">
+              <img src="assets/logo/white.svg" alt="" />
+            </div>
+            <div class="footer-title">Stay in the loop</div>
+            <hr class="line" />
+          </div>
+
+          <ul class="list">
+            <li>Home</li>
+            <li>Our work</li>
+            <li>What we do</li>
+            <li>Recent news</li>
+            <li>About us</li>
+            <li>Get in touch</li>
+          </ul>
+          <ul class="list">
+            <li>Privacy policy</li>
+            <li>Style guide</li>
+            <li>Licenses</li>
+            <li>Instructions</li>
+            <li>Password</li>
+            <li>404</li>
+          </ul>
+
+          <ul class="list">
+            <li>Dribbble</li>
+            <li>Instagram</li>
+            <li>Behance</li>
+            <li>LinkedIn</li>
+          </ul>
+        </div>
+
+        <div class="footer-bootom">
+          <div class="copy">© Analogue 2021. All Rights Reserved.</div>
+
+          <div class="copy">
+            Built by
+            <span>Nikolai Bain</span>
+            .
+          </div>
+          <div class="copy">
+            Powered by
+            <span>Webflow</span>
+            .
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
