--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/media.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
         <div class="logo"><img src="assets/logo/black.svg" alt="logo" /></div>
+
+
+        <input type="checkbox" id="check">
 
         <ul class="menu">
           <li><a href="#">Our work</a></li>
@@ -26,6 +30,8 @@
           <li><a href="#">About us</a></li>
           <li><a href="#">Get in touch</a></li>
         </ul>
+
+        <label for="check" class="burger-menu">X</label>
       </div>
     </nav>
 
