burger menu icon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="#">Get in touch</a></li>
         </ul>
 
-        <label for="check" class="burger-menu">X</label>
+        <label for="check" class="burger-menu"><img src="assets/logo/bars.svg" alt=""></label>
       </div>
     </nav>
 
